--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -1,23 +1,23 @@
 $locale-bg: #333;
 $locale-color: #999999;
 $locale-hover-color: #fff;
-$link-color: #336C86;
+$link-color: #5378BF;
 $body-font-color: #333;
-$body-bg: #f7eee1;
-$button-bg: #8b9352;
+$body-bg: #f3f1eb;
+$button-bg: #6EA942;
 $button-color: #fff;
 $heading-color: #3d3b38;
-$font-family: "Roboto Slab", Georgia, serif;
+$font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, serif;
 $sans-serif-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-$main_menu-bg: #2c5d74;
+$banner_bg: #C8C9CB;
+$main_menu-bg: darken($banner_bg, 15%);
 $main_menu-search_text: #333;
 $main_menu-link_text: #fff;
 $main_menu-search_bg: #67848c;
-$banner_bg: #354c56;
-$submenu-color: #9aa6ab;
+$submenu-color: #333;
 
-$main_menu-link_bg: #2c5d74;
+$main_menu-link_bg: darken($banner_bg, 15%);
 $main_menu-active_link_text: $main_menu-link_bg;
 $main_menu-active_link_bg: $body-bg;
 
@@ -25,8 +25,8 @@ $footer-bg: #333;
 $footer-color: #ccc;
 $footer-link-color: #fff;
 
-$incoming-correspondence-color: #8c6673;
-$outgoing-correspondence-color: #6d918d;
+$incoming-correspondence-color: #EDDF29;
+$outgoing-correspondence-color: #5378BF;
 $correspondence-bg: #fff;
 $correspondence-shadow: #d3d3d3;
 
@@ -245,7 +245,7 @@ a.link_button_green_large {
   }
 
   #navigation_search_button{
-    background-color: mix($main_menu-search_bg, $main_menu-bg, 50%);
+    background-color: darken($main_menu-bg, 10%);
     border: none;
     transition: all 0.3s ease-out;
     color: $main_menu-search_text;
