Add Facebook link to footer

--- a/lib/views/general/_responsive_footer.html.erb
+++ b/lib/views/general/_responsive_footer.html.erb
@@ -17,6 +17,8 @@
                   <% end %>
                 </li>
               <% end %>
+
+              <li><%= link_to _("Like us on Facebook"), 'https://www.facebook.com/SobanukirwaRwanda' %></li>
             </ul>
           </li>
 
