Make logo look bigger on mobile screens

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -374,19 +374,33 @@ a.link_button_green_large {
 
   /* Pad evenly top and bottom on smaller devices */
   #logo_wrapper{
-
-    @include respond-min( $main_menu-mobile_menu_cutoff ){
-      @include lte-ie7 {
-        padding-bottom: 2em;
-      }
+    #logo {
+      display: block;
     }
-    @media(max-width: $main_menu-mobile_menu_cutoff ){
+
+    // Mobile logo
+    @media(max-width: $main_menu-mobile_menu_cutoff) {
       padding: 0.5em 0 0.5em 0.9375em;
+
+      #logo {
+        background-image: image-url('logo-mobile.png');
+        background-repeat: no-repeat;
+        background-position: left center;
+        background-size: 214px 30px;
+        height: 30px;
+      }
+
       img {
+        display: none;
         height: 30px;
       }
     }
-  }
+
+    // Desktop logo
+    @include respond-min($main_menu-mobile_menu_cutoff) {
+      margin-bottom: 0;
+    }
+}
 
 }
 
