--- a/lib/views/general/_frontpage_intro_sentence.html.erb
+++ b/lib/views/general/_frontpage_intro_sentence.html.erb
@@ -1,4 +1,9 @@
 <h2>
-  Your <strong>Right to Know</strong>
+  <%= _('Your <strong>Right to Know</strong>') %>
 </h2>
-<p>Every citizen has the right to access information held by public bodies. <strong>By law, they have to respond</strong>. <a href="<%= help_about_url %>">Find out more about Freedom of Information.</a></p>
+<p>
+  <%= _('Every citizen has the right to access information held by public authorities.' \
+        '<strong>By law, they have to respond</strong>. <a href={{ help_url }}>' \
+        'Find out more about Access to Information.</a>',
+        :help_url => help_about_url) %>
+</p>
