--- a/lib/views/help/about.html.erb
+++ b/lib/views/help/about.html.erb
@@ -3,7 +3,48 @@
 <%= render :partial => 'sidebar' %>
 
 <div id="left_column_flip">
- <h1 id="introduction">Introduction to <%= site_name %> <a href="#introduction">#</a> </h1> <p>This is a custom "about" page</p>
+  <h1 id="introduction">Introduction</h1>
+  <dl>
+
+  <dt id="purpose">What is Sobanukirwa for? <a href="#purpose">#</a> </dt>
+  <dd>To help you find out inside information about what the Rwandan government
+  is doing.
+  </dd>
+
+  <dt id="premise">How does the site work? <a href="#premise">#</a> </dt>
+  <dd>You choose the public authority that you would like information from, then
+  write a brief note describing what you want to know. We then send your request
+  to the public authority. Any response they make is automatically published on the
+  website for you and anyone else to find and read.
+  </dd>
+
+  <dt id="whybother_me">Why would I bother to do this? <a href="#whybother_me">#</a> </dt>
+  <dd>You pay taxes, and then government does things with the money. All sorts of
+  things that affect your life, from agriculture through to national defence. Some
+  it does badly, some it does well. The more we find out about how government
+  works, the better able we are to make suggestions to improve the things that
+  are done badly, and to celebrate the things that are done well.
+  </dd>
+
+  <dt id="whybother_them">Why would the public authority bother to reply? <a href="#whybother_them">#</a> </dt>
+  <dd>Under Rwanda's access to information law, they have to respond. The response
+  will either contain the information you want, or give a valid legal reason why
+  it must be kept confidential.
+  </dd>
+
+  <dt id="who">Who makes Sobanukirwa? <a href="#who">#</a> </dt>
+  <dd>Sobanukirwa is created and run by <a href="https://twitter.com/migishak">Migisha K. Claude</a> and <a href="https://twitter.com/stephen_abbott">Stephen Abbott Pugh</a>, 
+  in partnership with the <a href="http://www.odesudi.org/">Open Democracy and Sustainable Development Initiative.</a>
+  </dd>
+
+  <dt id="updates">How can I keep up with news about Sobanukirwa?<a href="#updates">#</a> </dt>
+  <dd>We have a <a href="<%= blog_path %>">blog</a> and a <a href="https://twitter.com/sobanukirwa">Twitter feed</a>.
+  </dd>
+
+
+  </dl>
+
+  <p><strong>Next</strong>, read about <a href="<%= help_requesting_path %>">making requests</a> --&gt;
+
+  <div id="hash_link_padding"></div>
 </div>
-
-
