--- a/lib/views/help/privacy.html.erb
+++ b/lib/views/help/privacy.html.erb
@@ -3,80 +3,57 @@
 <%= render :partial => 'sidebar' %>
 
 <div id="left_column_flip">
-<h1 id="privacy"><%= @title %> <a href="#privacy">#</a> </h1>
+  <h1 id="privacy"><%= @title %></h1>
+  <dl>
 
-<dl>
+  <dt id="email_address">Who gets to see my email address? <a href="#email_address">#</a> </dt>
 
-<dt id="email_address">Who gets to see my email address? <a href="#email_address">#</a> </dt>
+  <dd><p>We will not disclose your email address to anyone unless we are obliged to by law,
+  or you ask us to. This includes the public authority that you are sending a
+  request to.  They only get to see an email address
+  @sobanukirwa.rw which is specific to that request.  </p>
+  <p>If you send a message to another user on the site, then it will reveal your
+  email address to them. You will be told that this is going to happen.</p>
+  </dd>
 
-<dd><p>We will not disclose your email address to anyone unless we are obliged to by law,
-or you ask us to. This includes the public authority that you are sending a
-request to.  They only get to see an email address
-@<%= AlaveteliConfiguration::incoming_email_domain %> which is specific to that request.  </p>
-<p>If you send a message to another user on the site, then it will reveal your
-email address to them. You will be told that this is going to happen.</p>
-</dd>
+  <dt id="nasty_spam">Will you send nasty, brutish spam to my email address? <a href="#nasty_spam">#</a> </dt>
+  <dd>Nope. After you sign up to Sobanukirwa we will only send you emails
+  relating to a request you made, an email alert that you have signed up for,
+  or for other reasons that you specifically authorise. We will never give or
+  sell your email addresses to anyone else, unless we are obliged to by law, or
+  you ask us to.
+  </dd>
 
-<dt id="nasty_spam">Will you send nasty, brutish spam to my email address? <a href="#nasty_spam">#</a> </dt>
-<dd>Nope. After you sign up to <%= site_name %> we will only send you emails
-relating to a request you made, an email alert that you have signed up for,
-or for other reasons that you specifically authorise. We will never give or
-sell your email addresses to anyone else, unless we are obliged to by law, or
-you ask us to.
-</dd>
+  <dt id="public_request">Why will my name and my request appear publicly on the site? <a href="#public_request">#</a> </dt>
 
-<dt id="public_request">Why will my name and my request appear publicly on the site? <a href="#public_request">#</a> </dt>
+  <dd>
+  <p>We publish your request on the Internet so that anybody can read it and
+  make use of the information that you have found. We do not normally delete
+  requests (<a href="#delete_requests">more details</a>).
+  </p>
+  <p>
+  Your name is tangled up with your request, so has to be published as well.
+  It is only fair, as we're going to publish the name of the civil servant who
+  writes the response to your request.  Using your real name also helps people
+  get in touch with you to assist you with your research or to campaign with you.
+  </p>
+  </dd>
 
-<dd>
-<p>We publish your request on the Internet so that anybody can read it and
-make use of the information that you have found. We do not normally delete
-requests (<a href="#delete_requests">more details</a>).
-</p>
-<p>
-Your name is tangled up with your request, so has to be published as well.
-It is only fair, as we're going to publish the name of the civil servant who
-writes the response to your request.  Using your real name also helps people
-get in touch with you to assist you with your research or to campaign with you.
-</p>
-<p>By law, you must use your real name for the request to be a valid Freedom of
-Information request. See the next question for alternatives if you do not want
-to publish your full name.
-</p>
-</dd>
+  <dt id="real_name">Can I make an ATI request using a pseudonym? <a href="#real_name">#</a> </dt>
 
-<dt id="real_name">Can I make an FOI request using a pseudonym? <a href="#real_name">#</a> </dt>
-
-
-<dd>
-<p>Technically, you must use your real name for your request to be a valid Freedom of Information request in law. See this
-<a href="http://www.ico.gov.uk/upload/documents/library/freedom_of_information/detailed_specialist_guides/name_of_applicant_fop083_v1.pdf">guidance from the Information Commissioner</a> (January 2009).
-</p>
-
-<p>However, the same guidance also says it is good practice for the public
-authority to still consider a request made using an obvious pseudonym.
-You should refer to this if a public authority refuses a request because you
-used a pseudonym.</p>
-
-<p>Be careful though, even if the authority follows this good practice, the
-pseudonym will probably make it impossible for you to complain to the
-Information Commissioner later about the handling of your request.
+  <dd>
+<p>Yes. If you are concerned about using your real name, you can submit your request using a pseudonym.
+The 2013 access to information law does not state that applicants must use their real names.
 </p>
 
 <p>There are several good alternatives to using a pseudonym.</p>
 
 <ul>
-<li>Use a different form of your name. The guidance says
-that "Mr Arthur Thomas Roberts" can make a valid request as "Arthur Roberts",
-"A. T. Roberts", or "Mr Roberts", but <strong>not</strong> as "Arthur" or "A.T.R.".
-</li>
-<li>Women may use their maiden name.</li>
-<li>In most cases, you may use any name by which you are "widely known and/or
-is regularly used".
 <li>Use the name of an organisation, the name of a company, the trading name of
 a company, or the trading name of a sole trader.
 <li>Ask someone else to make the request on your behalf.
 <li>You may, if you are really stuck, ask us to make the request on
-your behalf. Please <a href="/help/contact">contact us</a> with
+your behalf. Please <a href="<%= help_contact_path %>">contact us</a> with
 a good reason why you cannot make the request yourself and cannot
 ask a friend to. We don't have the resources to do this for everyone.
 </ul>
@@ -85,49 +62,13 @@ ask a friend to. We don't have the resources to do this for everyone.
 
 </dd>
 
-<dt id="full_address">They've asked for my postal address! <a href="#full_address">#</a> </dt>
-
-<dd>
-<p>If a public authority asks you for your full, physical address, reply to them saying
-that section 8.1.b of the FOI Act asks for an "address for correspondence",
-and that the email address you are using is sufficient.
-</p>
-<p>
-The Ministry of Justice has <a href="http://www.justice.gov.uk/guidance/foi-procedural-what.htm">guidance
-on this</a> &ndash;
-<em>"As well as hard copy written correspondence, requests that are
-transmitted electronically (for example, in emails) are acceptable
-... If a request is received by email and no postal address is given, the email
-address should be treated as the return address."
-</em>
-</p>
-<p>As if that isn't enough, the Information Commissioner's
-<a href="http://www.ico.gov.uk/upload/documents/library/freedom_of_information/practical_application/foi_hints_for_practitioners_handing_foi_and_eir_requests_2008_final.pdf">Hints for Practitioners</a> say
-<em>"Any correspondence could include a request for information. If it is written (this includes e-mail), legible, gives the name of the applicant, an address for reply (which could be electronic), and includes a description of the information required, then it will fall within the scope of the legislation."</em>
-</p>
-</dd>
-
-<dt id="postal_answer">No no, they need a postal address to send a paper response! <a href="#postal_answer">#</a> </dt>
-
-<dd>
-<p>If an authority only has a paper copy of the information that you want,
-they may ask you for a postal address. To start with, try persuading them
-to scan in the documents for you. You can even <a href="http://www.whatdotheyknow.com/request/car_parking_charges_policy_and_a#outgoing-532">offer to gift them a scanner</a>, which in that particular case
-embarrassed the authority into finding one they had already.</p>
-
-<p>If that doesn't work, and you want to provide your postal address privately
-in order to receive the documents, mark your request as "They are going to reply by post", and it will
-give you an email address to use for that purpose.</p>
-</dd>
-
 <dt id="delete_requests">Can you delete my requests, or alter my name?  <a href="#delete_requests">#</a> </dt>
 
 <dd>
 
-<p><%= site_name %> is a permanent, public archive of Freedom of
-Information requests. Even though you may not find the response to
-a request useful any more, it may be of interest to others. For this
-reason, we will not delete requests.
+<p><%= site_name %> is a permanent, public archive of access to information requests. 
+Even though you may not find the response to a request useful any more, it may be of 
+interest to others. For this reason, we will not delete requests.
 </p>
 
 <p>Under exceptional circumstances we may remove or change your name
@@ -145,7 +86,7 @@ see the section on <a href="#real_name">pseudonyms</a>.</p>
 <dd>
 
 <p>If you see any personal information about you on the site which you'd like
-us to remove or hide, then please <a href="/help/contact">let us know</a>.
+us to remove or hide, then please <a href="<%= help_contact_path %>">let us know</a>.
 Specify exactly what information you believe to be problematic and why, and
 where it appears on the site.</p>
 
@@ -165,11 +106,7 @@ line manager. This request must demonstrate that a risk has been perceived
 which outweighs the public interest, and must demonstrate that efforts have
 been made to conceal the name on the organisation's own website.</p>
 
-<p>For all other requests we apply a public interest test to decide
-whether information should be removed.
-<a href="http://www.statutelaw.gov.uk/content.aspx?ActiveTextDocId=3190650"> Section 32</a>
-of the Data Protection Act 1998 permits us to do this, as the material we
-publish is journalistic. We cannot easily edit many types of attachments (such
+<p>We cannot easily edit many types of attachments (such
 as PDFs, or Microsoft Word or Excel files), so we will usually ask
 that authorities resend these with the personal information removed.</p>
 
@@ -178,9 +115,8 @@ that authorities resend these with the personal information removed.</p>
 
 </dl>
 
-<p><strong>Learn more</strong> from the help for <a href="/help/officers">FOI officers</a> --&gt;
+<p><strong>Learn more</strong> from the help for <a href="<%= help_officers_path %>">information officers</a> --&gt;
 
-<div id="hash_link_padding"></div>
-
-
+  <div id="hash_link_padding"></div>
 </div>
+
