--- a/lib/views/general/_responsive_footer.html.erb
+++ b/lib/views/general/_responsive_footer.html.erb
@@ -28,7 +28,7 @@
             <h5><%= _("With the help of")%></h5>
 
             <%= link_to 'http://www.odesudi.org', :class => 'footer-logo' do %>
-              <%= image_tag('odesudi-logo.jpg', :alt => "ODESUDI logo") %>
+              <%= image_tag('odesudi-logo.png', :alt => "ODESUDI logo") %>
             <% end %>
           </li>          
         </ul>
