Update footer text

--- a/lib/views/general/_responsive_footer.html.erb
+++ b/lib/views/general/_responsive_footer.html.erb
@@ -24,13 +24,13 @@
 
           <li>
             <%= _('Powered by <a href="http://www.alaveteli.org/">Alaveteli</a>') %>
-          
-            <h5><%= _("With the help of")%></h5>
+
+            <h5><%= _("In partnership with")%></h5>
 
             <%= link_to 'http://www.odesudi.org', :class => 'footer-logo' do %>
               <%= image_tag('odesudi-logo.png', :alt => "ODESUDI logo") %>
             <% end %>
-          </li>          
+          </li>
         </ul>
     </div>
   </div>
