Make language switcher text smaller on desktop

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -333,6 +333,7 @@ body:before {
     background-position: 0.5em 0.5em;
     background-color: $locale-bg;
     border-radius: 0 0 1.25em 1.25em;
+    font-size: 0.82em;
     padding: 0 1em 0 2.5em;
     right: 15px;
   }
