--- a/lib/views/general/_frontpage_intro_sentence.html.erb
+++ b/lib/views/general/_frontpage_intro_sentence.html.erb
@@ -2,8 +2,8 @@
   <%= _('Your <strong>Right to Know</strong>') %>
 </h2>
 <p>
-  <%= _('Every citizen has the right to access information held by public authorities.' \
-        '<strong>By law, they have to respond</strong>. <a href={{help_url}}>' \
-        'Find out more about Access to Information.</a>',
+  <%= _('Every citizen has the right to access information held by public authorities ' \
+        'and some private bodies. <strong>By law, they have to respond</strong>. '
+        '\<a href={{help_url}}>Find out more about Access to Information.</a>',
         :help_url => help_about_url) %>
 </p>
