--- a/lib/views/general/_frontpage_intro_sentence.html.erb
+++ b/lib/views/general/_frontpage_intro_sentence.html.erb
@@ -3,7 +3,7 @@
 </h2>
 <p>
   <%= _('Every citizen has the right to access information held by public authorities ' \
-        'and some private bodies. <strong>By law, they have to respond</strong>. '
-        '\<a href={{help_url}}>Find out more about Access to Information.</a>',
+        'and some private bodies. <strong>By law, they have to respond</strong>. ' \
+        '<a href={{help_url}}>Find out more about Access to Information.</a>',
         :help_url => help_about_url) %>
 </p>
