Clean up french help page translations

--- a/lib/views/help/officers.fr.html.erb
+++ b/lib/views/help/officers.fr.html.erb
@@ -16,8 +16,8 @@
   tout simplement répondre à la demande comme pour tout autre demande d'un individu . La seule différence
   est que votre réponse sera automatiquement publiée sur l'Internet.</p>
   
-  <p>Si vous avez des préoccupations concernant l'intimité ou autres , s'il vous plaît lisez les réponses ci-dessous.<a
-  href="<%= help_about_path %>">introduction to Sobanukirwa</a> 
+  <p>Si vous avez des préoccupations concernant l'intimité ou autres , s'il vous plaît lisez les réponses ci-dessous.
+    <a href="<%= help_about_path %>">introduction to Sobanukirwa</a> 
   pour en savoir plus sur ce que le site fait du point de vue de l'utilisateur . Vous pouvez également rechercher
   le site pour trouver l'autorité pour laquelle vous travaillez , et voir le statut des demandes faites en 
   utilisant le site .
@@ -75,7 +75,7 @@
  de livraison apparaîtront automatiquement sur le site . Vous pouvez vérifier l'adresse que nous utilisons sur
  " Voir ATI adresse e-mail "lien qui apparaît sur la page de l'autorité. 
  
-  <ahref="<%= help_contact_path %>">Nous contacter</a> 
+  <a href="<%= help_contact_path %>">Nous contacter</a> 
   s'il ya une meilleure adresse que nous pouvons utiliser.</p>
   
   <p>
@@ -85,14 +85,14 @@
   provenance de <strong>@sobanukirwa.rw</strong>.
   
   
-  Si<a href="<%= help_contact_path %>">vous nous demander</a> 
+  Si <a href="<%= help_contact_path %>"> vous nous demander</a> 
   
   
-  nous vous renverrons toute demande ,
+  nous vous renverrons toute demande,
  et / ou donner des détails techniques de la livraison de sorte qu'un département informatique peut 
  retracer ce qui est arrivé au message.</p>
   
-<p>Enfin, vous pouvez répondre à toute demande de votre navigateur Web , sans avoir besoin du courriel , 
+<p>Enfin, vous pouvez répondre à toute demande de votre navigateur Web, sans avoir besoin du courriel, 
 en utilisant le " répondre à la demande " lien au bas de chaque page de la demande.</p>
   
   </dd>
@@ -104,12 +104,12 @@ en utilisant le " répondre à la demande " lien au bas de chaque page de la dem
 
   <blockquote><p>
   Un agent d'information doit prendre une décision sur une demande d'informations dès que possible. 
-  Toutefois , le délai ne doit pas dépasser trois jours ouvrables a partir de la date de réception
+  Toutefois, le délai ne doit pas dépasser trois jours ouvrables a partir de la date de réception
   de la demande.</blockquote>
   
   <p>Cependant, le temps peut être réduit comme suit:</p>
   
-  <p>1° l'information demandée concerne la vie ou la liberté d' une personne , l' information doit être 
+  <p>1° l'information demandée concerne la vie ou la liberté d' une personne, l' information doit être 
   fournie dans les vingt-quatre heures après la réception de la demande;</p>
 
   <p>2° l'information est demandée par un journaliste a la recherche des informations, l' information 
@@ -122,9 +122,9 @@ en utilisant le " répondre à la demande " lien au bas de chaque page de la dem
   tout autre moyen de technologie sans préjudice des dispositions de lois".
   </p>
   
-  <p>Le texte intégral de la loi peut être trouvée dans <a href="http://www.primature.gov.rw/index.php?eID=tx_mm_bccmsbase_zip&id
-  =803869345476cde5d502d">Gazette officielle no 10 of 11.03.2013</a> 
-  sur le site Web de la Primature.
+  <p>Le texte intégral de la loi peut être trouvée dans
+  <a href="http://www.primature.gov.rw/index.php?eID=tx_mm_bccmsbase_zip&id=803869345476cde5d502d">
+  Gazette officielle no 10 of 11.03.2013</a> sur le site Web de la Primature.
   </p>
   
   </dd>
@@ -154,7 +154,7 @@ en utilisant le " répondre à la demande " lien au bas de chaque page de la dem
 
   <dd>
   Nous considérons ce que les fonctionnaires font dans le cadre de leur emploi être connu par le public. 
-  Nous allons supprimer le contenu dans des circonstances exceptionnelles, voir  notre
+  Nous allons supprimer le contenu dans des circonstances exceptionnelles, voir notre
   <a href="<%= help_privacy_path(:anchor => 'takedown') %>">police sur la supression du contenu</a>.
   </dd>
 
@@ -162,12 +162,12 @@ en utilisant le " répondre à la demande " lien au bas de chaque page de la dem
 
   <dd><p>
   Pour éviter les spam , nous supprimons automatiquement la plupart des e-mails et numéros mobiles à partir des 
-  réponses aux demandes. Veuillez <a href="<%= help_contact_path %>">nous contacter</a> au cas ou il manque quelque
+  réponses aux demandes. Veuillez <a href="<%= help_contact_path %>"> nous contacter</a> au cas ou il manque quelque
   chose. Pour des raisons techniques, nous ne supprimons pas toujours ce qui se trouvent dans des pièces jointes genre
   PDF.</p>
   
   <p>
-  Si vous desirez savoir une adresse que nous avons supprimé, veuillez<a
+  Si vous desirez savoir une adresse que nous avons supprimé, veuillez <a
     href="<%= help_contact_path %>">nous contacter</a>. 
   Occasionnellement, une adresse e-mail constitue une partie importante d'une réponse et nous 
   allons l'afficher dans une forme masquée dans une annotation.  
@@ -190,8 +190,8 @@ en utilisant le " répondre à la demande " lien au bas de chaque page de la dem
 
   </dl>
 
-  <p><strong>Si vous n'avez pas encore</strong>lu<a href="<%= help_about_path %>">l'introduction</a> --&gt;
-  <br><strong>Sinon</strong>,les<a href="<%= help_credits_path %>">credits</a>ou bien <a href="<%= help_api_path %>">
+  <p><strong>Si vous n'avez pas encore</strong> lu <a href="<%= help_about_path %>">l'introduction</a> --&gt;
+  <br><strong>Sinon</strong>, les <a href="<%= help_credits_path %>">credits</a> ou bien <a href="<%= help_api_path %>">
   l'API des programmeurs</a> --&gt;
 
   <div id="hash_link_padding"></div>
