--- a/lib/views/help/requesting.fr.html.erb
+++ b/lib/views/help/requesting.fr.html.erb
@@ -31,7 +31,7 @@ rediriger pour votre deuxième recherche.</li>
   <dt id="missing_body">Il vous manque l'autorité publique que j'aimerai contacter<a href="#missing_body">#</a> </dt>
 
   <dd>
-  <p>Veuillez<a href="<%= new_change_request_path %>">nous contacter</a> avec le nom de l'autorité publique ainsi que
+  <p>Veuillez <a href="<%= new_change_request_path %>">nous contacter</a> avec le nom de l'autorité publique ainsi que
   leur adresse e-mail utilisé pour répondre aux demandes d'accès a l'information
   
   </p>
@@ -120,8 +120,8 @@ efficace et très facile manière est de publier un blog personel  <%= link_to '
       
       <li>
       Si vous n'avez toujours des pas de chance , alors vous pouvez porter plainte au <a href="http://www.ombudsman.gov.rw/?
-      How-to-complain">Bureau de l'Ombudsman</a> a propos de l'autorité. Lisez notre page'<a href="<%= help_general_path
-      (:action =>'unhappy') %>"> ça marche?</a>'.
+      How-to-complain">Bureau de l'Ombudsman</a> a propos de l'autorité. Lisez notre page'
+      <a href="<%= help_general_path(:action =>'unhappy') %>"> ça marche?</a>'.
       
   </ul>
   </dd>
@@ -193,7 +193,7 @@ Postez un lien vers un forum ou une campagne appropriée ailleurs.</p>
 
   </dl>
 
-  <p><strong>Ensuite</strong>, nous vons invitons à lire la section sur la<a href="<%= help_privacy_path %>">
+  <p><strong>Ensuite</strong>, nous vons invitons à lire la section sur la <a href="<%= help_privacy_path %>">
   confidentialité des données privées</a> --&gt;
 
   <div id="hash_link_padding"></div>
