Clean up RW help page translations

--- a/lib/views/help/requesting.rw.html.erb
+++ b/lib/views/help/requesting.rw.html.erb
@@ -49,8 +49,8 @@
   </p>
 
   <p>
-  Niba ushaka amakuru yo gushyigikira igitekerezo runaka cyangwa kwamamaza, urubuga rw’ubwisanzure bwo kumenya amakuru rwagufasha cyane. N’ubwo utarukoresha wiyamamaza, twagushishikariza kurukoresha kugirango ubone amakuru wifuza. Turagushishikariza kwiyamamariza ahandi – uburyo bumwe bworoshye kandi bwizewe ni ugutangira <%= link_to 'start your own blog',
-  "urubuga rwawe rw’amakuru agezweho"%>. Ushobora kuvuga ku kwiyamamaza kwawe kuri uru rubuga ubinyujije mu bisobanuro by’ikibazo cyawe (ushobora kwongeraho ibisobanuro nyuma yo kwohereza ikibazo).
+  Niba ushaka amakuru yo gushyigikira igitekerezo runaka cyangwa kwamamaza, urubuga rw’ubwisanzure bwo kumenya amakuru rwagufasha cyane. N’ubwo utarukoresha wiyamamaza, twagushishikariza kurukoresha kugirango ubone amakuru wifuza. Turagushishikariza kwiyamamariza ahandi – uburyo bumwe bworoshye kandi bwizewe ni ugutangira <%= link_to "urubuga rwawe rw’amakuru agezweho",
+  "http://wordpress.com"%>. Ushobora kuvuga ku kwiyamamaza kwawe kuri uru rubuga ubinyujije mu bisobanuro by’ikibazo cyawe (ushobora kwongeraho ibisobanuro nyuma yo kwohereza ikibazo).
   </p>
 
   </dd>
