--- a/lib/views/help/api.fr.html.erb
+++ b/lib/views/help/api.fr.html.erb
@@ -76,11 +76,11 @@ formulaire. Vous pouvez les trouver en:
 
   <dt> 5. Write API </dt>
   <dd>
-      <p>
-      The write API is designed to be used by authorities to create their own requests in the system. The API is currently
-      used by mySociety's <a href="https://github.com/mysociety/foi-register">FOI Register software</a> to support using 
-      Alaveteli as a disclosure log for all FOI activity at a particular public body. More technical information about the 
-      write API is available on the <a href="https://github.com/mysociety/alaveteli/wiki/API#write-api">Alaveteli wiki</a>.
+      <p>L'API d'écriture est conçu pour être utilisé par les autorités pour créer leurs propres demandes dans le système . 
+      L'API est actuellement utilisé par mySociety <a href="https://github.com/mysociety/foi-register">enregistrer logiciels FOI</a>
+      pour soutenir l'usage d'Alaveteli comme un journal d'information pour toutes les activités FOI à un organisme public particulier.
+      Plus d'informations techniques sur l'API d'écriture est disponible sur le <a href="https://github.com/mysociety/alaveteli/wiki/API#write-api">
+      wiki Alaveteli</a>.
       </p>
   </dd>
 </dl>
