Update footer wording

--- a/lib/views/general/_responsive_footer.html.erb
+++ b/lib/views/general/_responsive_footer.html.erb
@@ -25,7 +25,7 @@
           <li>
             <%= _('Powered by <a href="http://www.alaveteli.org/">Alaveteli</a>') %>
 
-            <h5><%= _("In partnership with")%></h5>
+            <h5><%= _("Co-created by")%></h5>
 
             <%= link_to 'http://www.odesudi.org', :class => 'footer-logo' do %>
               <%= image_tag('odesudi-logo.png', :alt => "ODESUDI logo") %>
