Align follower count and subscription/request buttons on authority page.

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -609,6 +609,12 @@ dt {
     }
 }
 
+/* Authority page */
+.action-bar__follower-count {
+  padding: 3px;
+  font-size: 1.1rem;
+}
+
 /* Request list page */
 #request_list {
   #filter_requests_form {
