--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -461,14 +461,18 @@ body:before {
 
 /* Footer */
 #footer {
-  background-color: $footer-bg;
-  color: $footer-color;
-  font-family: $sans-serif-font-family;
+  background-color: $color_black;
+  color: $color_mid_grey;
   font-size: 1em;
-  padding: 2em 4em;
   a {
     text-decoration: none;
-    color: $footer-link-color;
+    color: $color_white;
+    &:hover,
+    &:active,
+    &:focus {
+      color: $color_bright_green;
+      text-decoration: underline;
+    }
   }
   h1,h2,h3,h4,h5,h6 {
     color: lighten($heading-color, 15%);
@@ -495,6 +499,18 @@ body:before {
   }
 }
 
+.footer__about {
+  h2 {
+    color: $color_white;
+  }
+}
+
+.footer__final {
+  .row {
+    border-top: 1px solid lighten($color_black, 6%);
+  }
+}
+
 /* Public body page */
 @media(max-width: $main_menu-mobile_menu_cutoff) {
   #public_body_show {
@@ -503,6 +519,12 @@ body:before {
         height: auto;
       }
     }
+  }
+}
+
+.footer__final {
+  .row {
+    border-top: 1px solid lighten($color_black, 6%);
   }
 }
 
