--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -863,6 +863,63 @@ li:nth-child(3) {
   font-size: 1.1rem;
 }
 
+
+.homepage-hero {
+  color: $color_black;
+  padding: 2em 0 5em;
+  position: relative;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    padding: 5em 0 8em;
+  }
+
+  a {
+    &:hover,
+    &:active,
+    &:focus {
+      color: $color_black;
+    }
+  }
+
+  .button {
+    color: $color_white;
+    background-color: $color_custom_green;
+    border-color: $color_custom_green;
+    transition: color 300ms ease-out;
+    &:hover,
+    &:active,
+    &:focus {
+      color: $color_white;
+      background-color: darken($color_custom_green, 15%);
+      border-color: darken($color_custom_green, 15%);
+      transition: color 300ms ease-out;
+    }
+  }
+}
+
+.intro__title {
+  color: $color_black;
+  text-shadow: 0 1px 2px transparentize($color_black, 0.7);
+}
+
+.new-request__content {
+  background-color: $color_custom_light_grey;
+  border-radius: 5px;
+  padding: 1.888888889em;
+}
+
+.new-request__title {
+  color: $color_black;
+  font-size: 1.4375em;
+  margin: 0 0 0.5em;
+}
+
+.new-request__description {
+  color: transparentize($color_black, 0.2);
+  @include ie8 {
+    color: $color_black;
+  }
+}
+
 /* Request list page */
 #request_list {
   #filter_requests_form {
