--- a/lib/views/general/_responsive_footer.html.erb
+++ b/lib/views/general/_responsive_footer.html.erb
@@ -29,9 +29,14 @@
 
             <h5><%= _("Co-created by")%></h5>
 
+            <%= link_to 'http://www.tumenye.rw', :class => 'footer-logo tumenye' do %>
+              <%= image_tag('tumenye-logo.png', :alt => "Tumenye logo") %>
+            <% end %>
+
             <%= link_to 'http://www.odesudi.org', :class => 'footer-logo' do %>
               <%= image_tag('odesudi-logo.png', :alt => "ODESUDI logo") %>
             <% end %>
+
           </li>
         </ul>
     </div>
