--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -201,19 +201,21 @@ input.use-datepicker[type=text] {
   }
   @if $disabled {
     opacity: 0.333;
+    transition: none;
     &:hover,
     &:active,
     &:focus {
       background-color: inherit;
       color: inherit;
       cursor: default;
+      transition: none;
     }
   }
 }
 
 @mixin button-primary($args...) {
   @include button-base($args...);
-  color: #fff;
+  color: $color_white;
   background-color: $button-bg;
   border: none;
   &:hover,
@@ -222,36 +224,36 @@ input.use-datepicker[type=text] {
   &:visited:hover,
   &:visited:active,
   &:visited:focus {
-      background-color: darken($button-bg, 10%);
-      color: #fff;
+    background-color: darken($button-bg, 10%);
+    color:  $color_white;
   }
 }
 
 @mixin button-secondary($args...) {
   @include button-base($args...);
-    background-color: $color_light_grey;
+    background-color: desaturate(darken($color_sand, 10%), 5%);
     color: $color_black;
     font-weight: normal;
     &:hover,
     &:active,
     &:focus {
-      color: #333;
-      background-color: darken($color_light_grey, 7.5%);
+      color: $color_black;
+      background-color:  desaturate(darken($color_sand, 15%), 5%);
       color: $color_black;
     }
 }
 
 @mixin button-tertiary($args...) {
   @include button-base($args...);
-  background-color: transparent;
-  color: #333;
+  background-color: desaturate(darken($color_sand, 5%), 5%);;
+  color: $color_black;
   font-weight: normal;
-  border: 1px solid #e9e9e9;
+  border: 1px solid desaturate(darken($color_sand, 15%),5%);
   &:hover,
   &:active,
   &:focus {
-    background-color: darken(#edece8, 7.5%);
-    border: 1px solid #ddd;
+    background-color: darken($color_sand, 7.5%);
+    border: 1px solid desaturate(darken($color_sand, 25%),5%);
   }
 }
 
@@ -762,6 +764,14 @@ a.link_to_this {
   }
 }
 
+.feed_link_sidebar .link_button_green {
+  @include button-secondary();
+}
+
+.report-this-request {
+  @include button-secondary();
+}
+
 /* Status lines and icons */
 .icon_waiting_classification,
 .icon_waiting_response,
@@ -802,6 +812,12 @@ a.link_to_this {
   }
   .view_html_logo, .view_html_description {
     padding-top: 1em;
+  }
+}
+
+#header_right {
+  .link_button_green {
+    @include button-secondary;
   }
 }
 
@@ -889,11 +905,17 @@ li:nth-child(3) {
 }
 
 .learn-more-foi {
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    margin-top: 3em;
+  }
   a {
     @include button-secondary();
   }
-  @include respond-min( $main_menu-mobile_menu_cutoff ){
-    margin-top: 2em;
+}
+
+.latest-requests {
+  .button-secondary {
+    @include button-secondary();
   }
 }
 
@@ -903,6 +925,15 @@ li:nth-child(3) {
   font-size: 1.1rem;
 }
 
+.action-bar__follow-button {
+  .link_button_green {
+    @include button-secondary();
+  }
+}  
+
+.authority__body__sidebar form input[type=submit] {
+  @include button-secondary();
+}
 
 .homepage-hero {
   color: $color_black;
