--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -31,8 +31,7 @@ $body-bg: $color_neutral_light;
 $body-font-color: $color_neutral_dark;
 $link-color: $color_primary;
 $action-color: $color_custom_green;
-$font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, serif;
-$sans-serif-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $form_input-bg: $color_white;
 
 $button-bg: $action-color;
