--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -1,4 +1,3 @@
-$color_custom_sand: #f3f1eb;
 $color_custom_blue: #5378BF;
 $color_custom_yellow: #EDDF29;
 $color_custom_green: #6EA942;
@@ -6,7 +5,16 @@ $color_custom_teal: #67848c;
 $color_custom_light_grey: #C8C9CB;
 $color_custom_mid_cold_grey: #a1a2a6;
 
-$color_sand: #f7eee1;
+$color_sand: #f3f1eb;
+$color_slate: #333333;
+$color_green: #62b356;
+$color_white: #ffffff;
+
+$color_neutral_light: $color_sand;
+$color_neutral_dark: $color_slate;
+$color_primary: $color_custom_blue;
+$color_secondary: $color_custom_yellow;
+
 $color_light_blue: #67848C;
 $color_blue: #336C86;
 $color_dark_blue: #2c5d74;
@@ -14,7 +22,6 @@ $color_darker_blue: #354C56;
 $color_red: #8c6673;
 $color_dark_red: #A1432C;
 $color_teal: #6d918d;
-$color_green: #8b9352;
 $color_bright_green: #839310;
 $color_light_green: #AAB26E;
 $color_pale_green: #D7DABD;
@@ -29,9 +36,8 @@ $color_mid_grey: #999999;
 $color_light_grey: #CCCCCC;
 $color_lighter_grey: #D3D3D3;
 $color_mid_cold_grey: #9AA6AB;
-$color_white: #ffffff;
 
-$body-bg: $color_custom_sand;
+$body-bg: $color_sand;
 
 $locale-bg: $color_black;
 $locale-color: $color_mid_grey;
