--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -48,10 +48,6 @@ $form_input-bg: $color_white;
 $button-bg: $color_custom_green;
 $button-color: $color_white;
 
-$footer-bg: $color_black;
-$footer-color: $color_light_grey;
-$footer-link-color: $color_white;
-
 $status-success: $color_light_green;
 $status-failure: $color_bright_orange;
 $status-pending: $color_yellow;
@@ -626,8 +622,8 @@ body:before {
 
 /* Footer */
 #footer {
-  background-color: $color_black;
-  color: $color_mid_grey;
+  background-color: $color_neutral_dark;
+  color: darken($color_neutral_light, 10%);
   font-size: 1em;
   a {
     text-decoration: none;
@@ -635,7 +631,7 @@ body:before {
     &:hover,
     &:active,
     &:focus {
-      color: $color_bright_green;
+      color: lighten($color_primary, 10%);
       text-decoration: underline;
     }
   }
@@ -672,7 +668,7 @@ body:before {
 
 .footer__final {
   .row {
-    border-top: 1px solid lighten($color_black, 6%);
+    border-top: 1px solid lighten($color_neutral_dark, 6%);
   }
 }
 
