--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -26,24 +26,6 @@ $color_neutral_dark: $color_slate;
 $color_primary: $color_custom_blue;
 $color_secondary: $color_custom_yellow;
 
-$color_light_blue: #67848C;
-$color_dark_blue: #2c5d74;
-$color_darker_blue: #354C56;
-$color_dark_red: #A1432C;
-$color_teal: #6d918d;
-$color_bright_green: #839310;
-$color_light_green: #AAB26E;
-$color_pale_green: #D7DABD;
-$color_bright_orange: #FF7959;
-$color_pale_orange: #EBC3A9;
-$color_pale_yellow: #EDD3B8;
-$color_black_alt: #3d3b38;
-$color_black: #333333;
-$color_mid_grey: #999999;
-$color_light_grey: #CCCCCC;
-$color_lighter_grey: #D3D3D3;
-$color_mid_cold_grey: #9AA6AB;
-
 $body-bg: $color_neutral_light;
 
 $body-font-color: $color_neutral_dark;
@@ -209,21 +191,21 @@ input.use-datepicker[type=text] {
 @mixin button-secondary($args...) {
   @include button-base($args...);
     background-color: desaturate(darken($color_sand, 10%), 5%);
-    color: $color_black;
+    color: $color_slate;
     font-weight: normal;
     &:hover,
     &:active,
     &:focus {
-      color: $color_black;
+      color: $color_slate;
       background-color:  desaturate(darken($color_sand, 15%), 5%);
-      color: $color_black;
+      color: $color_slate;
     }
 }
 
 @mixin button-tertiary($args...) {
   @include button-base($args...);
   background-color: desaturate(darken($color_sand, 5%), 5%);;
-  color: $color_black;
+  color: $color_slate;
   font-weight: normal;
   border: 1px solid desaturate(darken($color_sand, 15%),5%);
   &:hover,
@@ -375,7 +357,7 @@ body:before {
     @extend %menu-item;
     background-color: transparent;
     font-weight: normal;
-    color: $color_black;
+    color: $color_slate;
     &:hover,
     &:active,
     &:focus {
@@ -415,7 +397,7 @@ body:before {
     @include respond-min($main_menu-mobile_menu_cutoff) {
       margin-top: 0;
       border-radius: 3px;
-      background-color: $color_black;
+      background-color: $color_slate;
       color: $color_white;
       padding: 0;
     }
@@ -535,7 +517,7 @@ body:before {
   color: $color_white;
   border-color: $color_custom_mid_cold_grey;
   @include respond-min($main_menu-mobile_menu_cutoff) {
-    background-color: lighten($color_black, 6%);
+    background-color: lighten($color_neutral_dark, 6%);
     border-bottom: 1px solid lighten($color_neutral_dark, 2%);
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
@@ -562,7 +544,7 @@ body:before {
 
   /* locale border */
   @include respond-min( $main_menu-mobile_menu_cutoff ){
-    border-top: 4px solid $color_black;
+    border-top: 4px solid $color_slate;
   }
 
   /* Hide the greeting on smaller devices */
@@ -642,7 +624,7 @@ body:before {
     }
   }
   h1,h2,h3,h4,h5,h6 {
-    color: lighten($color_black-alt, 15%);
+    color: lighten($color_slate, 20%);
   }
   h1:first-child,
   h2:first-child,
@@ -691,14 +673,14 @@ body:before {
 
 .footer__final {
   .row {
-    border-top: 1px solid lighten($color_black, 6%);
+    border-top: 1px solid lighten($color_slate, 6%);
   }
 }
 
 /* Request page */
 div.correspondence {
   background-color: $color_white;
-  box-shadow: 0 2px 2px transparentize($color_black, 0.8);
+  box-shadow: 0 2px 2px transparentize($color_slate, 0.8);
   border: none;
   border-radius: 5px;
   margin-bottom: 2em;
@@ -864,7 +846,7 @@ dt {
 .steps__step-box {
   background-color: $color_white;
   padding: 2em;
-  box-shadow: 0 1px 2px transparentize($color_black, 0.75);
+  box-shadow: 0 1px 2px transparentize($color_slate, 0.75);
   @include respond-min( $main_menu-mobile_menu_cutoff ){
     min-height: 11em;
   }
@@ -878,7 +860,7 @@ dt {
   height: 3.5em;
   width: 3.5em;
   background-color: $color_primary;
-  box-shadow: 0 1px 2px transparentize($color_black, 0.75);
+  box-shadow: 0 1px 2px transparentize($color_slate, 0.75);
   padding: 1em;
   border-radius: 100%;
   color: $color_white;
@@ -922,7 +904,7 @@ dt {
 }
 
 .homepage-hero {
-  color: $color_black;
+  color: $color_slate;
   padding: 2em 0 5em;
   position: relative;
   @include respond-min($main_menu-mobile_menu_cutoff) {
@@ -933,7 +915,7 @@ dt {
     &:hover,
     &:active,
     &:focus {
-      color: $color_black;
+      color: $color_slate;
     }
   }
 
@@ -943,8 +925,8 @@ dt {
 }
 
 .intro__title {
-  color: $color_black;
-  text-shadow: 0 1px 2px transparentize($color_black, 0.7);
+  color: $color_slate;
+  text-shadow: 0 1px 2px transparentize($color_slate, 0.7);
 }
 
 .new-request__content {
@@ -954,15 +936,15 @@ dt {
 }
 
 .new-request__title {
-  color: $color_black;
+  color: $color_slate;
   font-size: 1.4375em;
   margin: 0 0 0.5em;
 }
 
 .new-request__description {
-  color: transparentize($color_black, 0.2);
+  color: transparentize($color_slate, 0.2);
   @include ie8 {
-    color: $color_black;
+    color: $color_slate;
   }
 }
 
