Allow language switcher dropdown to expand horizontally
Handy for displaying languages with very long names!

Part of mysociety/alaveteli#2989.

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -449,7 +449,7 @@ body:before {
     z-index: 1000;
     border-radius: 3px;
     font-size: 1em;
-    width: 100%;
+    min-width: 100%;
   }
 
 }
