Fix header and footer

--- a/assets/stylesheets/responsive/_footer_layout.scss
+++ b/assets/stylesheets/responsive/_footer_layout.scss
@@ -1,5 +1,7 @@
+@import "foundation/components/block-grid";
+
 /* Footer layout */
-#footer {
+.footer {
   @include grid-row;
   padding-top: 10px;
   margin-top: 50px;
