--- a/lib/views/general/_responsive_footer.html.erb
+++ b/lib/views/general/_responsive_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer" id="footer">
+<div class="footer" id="footer" role="contentinfo">
   <div class="footer-inner">
     <div id="footer-nav">
         <ul>
