Adapt alavetelitheme stylesheet

--- a/assets/stylesheets/responsive/_settings.scss
+++ b/assets/stylesheets/responsive/_settings.scss
@@ -37,7 +37,8 @@ $color_soubankirwa_mutedorange: #d69457;
 
 $color_neutral_light: $color_sand;
 $color_neutral_dark: $color_black;
-$color_primary: $color_sobanukirwa_darkgreen;
+$color_primary: $color_sobanukirwa_palegrey;
+/* $color_primary: $color_sobanukirwa_darkgreen; */
 $color_secondary: $color_sobanukirwa_steel;
 
 $body-bg: $color_sand;
