--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -1,16 +1,24 @@
+
+/* Mixin styles */
+
+/* Hide text when it's replaced by an image */
+.image-replacement {
+  overflow: hidden;
+  text-indent: 150%;
+  white-space: nowrap;
+}
+
 /* General styling of nav menu items */
 %menu-item {
   text-decoration: none;
-  background-color: $topnav_bg;
   color: transparentize($color_white, 0.2);
   @include ie8 {
     color: $color_white;
   }
   transition: background-color 0.5s ease-out;
-
   &:hover{
-      background-color: darken($topnav_bg, 5%);
-      color: transparentize($color_white, 0);
+    background-color: darken($topnav_bg, 10%);
+    color: $color_white;
   }
 
 }
@@ -18,22 +26,10 @@
 /* Selected menu item */
 %selected-menu-item {
   font-weight: bold;
-  color: darken($color_sobanukirwa_palegrey, 15%);
-  background-color: $color_sand;
+  color: $topnav_bg;
+  background-color: $color_neutral_light;
   &:hover{
-      background-color: $color_sand;
-  }
-}
-
-/* Styling if not part of the main menu on larger screens */
-%sub-menu-item {
-  @include respond-min( $main_menu-mobile_menu_cutoff ){
-    background-color: $color_sobanukirwa_palegrey;
-    color: $color_white;
-    &:hover{
-        background-color: $color_sobanukirwa_palegrey;
-        color: transparentize($color_white, 0);
-    }
+      background-color: $color_neutral_light;
   }
 }
 
@@ -47,8 +43,16 @@ body{
   font-family: $font-family;
 }
 
-a{
-  color: $link-color;
+a {
+  &:link,
+  &:visited {
+    color: $link-color;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    color: darken($link-color, 10%);
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -72,7 +76,7 @@ form input[type="url"],
 form input[type="tel"],
 form input[type="number"] {
     border-radius: 0;
-    background-color: $color_white;
+    background-color: $form_input-bg;
     /* Set a fixed height for text inputs in older IE 8 */
     @include ie8{
         height: 2.3125em;
@@ -85,60 +89,93 @@ form input[type="number"] {
 
 input.use-datepicker[type=text] {
   width: 130px;
-  background:image-url('calendar.png') no-repeat 100px 5px $color_white;
+  background:image-url('calendar.png') no-repeat 100px 5px $form_input-bg;
+}
+
+/* Button styles */
+
+@mixin button-base($size: normal, $disabled: false) {
+  padding: 0.5em 1.25em;
+  border-radius: 3px;
+  display: inline-block;
+  font-weight: 600;
+  text-decoration: none;
+  transition: background-color 300ms ease-out;
+  margin-bottom: 0;
+  font-family: $font-family;
+  @if $size == large {
+    font-size: 2.2em;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    text-decoration: none;
+    transition: background-color 300ms ease-out;
+  }
+  @if $disabled {
+    opacity: 0.333;
+    transition: none;
+    &:hover,
+    &:active,
+    &:focus {
+      background-color: inherit;
+      color: inherit;
+      cursor: default;
+      transition: none;
+    }
+  }
+}
+
+@mixin button-primary($args...) {
+  @include button-base($args...);
+  color: $color_white;
+  background-color: $button-bg;
+  border: none;
+  &:hover,
+  &:active,
+  &:focus,
+  &:visited:hover,
+  &:visited:active,
+  &:visited:focus {
+    background-color: darken($button-bg, 10%);
+    color: $color_white;
+  }
+}
+
+@mixin button-secondary($args...) {
+  @include button-base($args...);
+  background-color: desaturate(darken($color_sand, 10%), 5%);
+  color: $color_black;
+  font-weight: normal;
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color_black;
+    background-color: desaturate(darken($color_sand, 20%), 5%);
+  }
+}
+
+@mixin button-tertiary($args...) {
+  @include button-base($args...);
+  background-color: desaturate(darken($color_sand, 5%), 5%);;
+  color: $color_black;
+  font-weight: normal;
+  border: 1px solid desaturate(darken($color_sand, 15%),5%);
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: darken($color_sand, 7.5%);
+    border: 1px solid desaturate(darken($color_sand, 25%),5%);
+  }
 }
 
 form input[type=submit], a.link_button_green, a.link_button_green_large {
+  @include button-primary;
   text-decoration: none;
-  color: $button-color;
-  background-color: darken($button-bg, 5%);
-  display: inline-block;
-  cursor: pointer;
-  /* This style is expressed for all borders to avoid triggering an IE9 border rendering bug */
-  border-style: solid; border-color: darken($button-bg, 15%); border-width: 0 0 4px 0;
-  border-radius: 0;
-  padding: 3px 7px;
-  line-height: normal;
-  font-size: 1.1rem;
-  /* Same height as form elements */
-  height: 2.3125rem;
-  @include ie8 {
-     height: 2.3125em;
-     font-size: 1.1em;
-   }
-  vertical-align: top;
-  &:focus, &:hover{
-    text-decoration: none;
-    background-color: darken($button-bg, 10%);
-    border-bottom: 4px solid darken($button-bg, 20%);
-  }
-}
-
-@include lte-ie7{
-
-  a.link_button_green, a.link_button_green_large {
-    padding: 0 7px;
-    height: 31px;
-    font-weight: bold;
-  }
-
-  form input[type=submit] {
-    padding: 0;
-    height: 35px;
-  }
 }
 
 a.link_button_green_large {
-  font-size: 2.2rem;
-  height: inherit;
-  padding: 0 10px;
-  @include ie8 {
-     font-size: 2.2em;
-     height: 66px;
-   }
-   @include lte-ie7 {
-     height: 50px;
-   }
+  @include button-primary($size: large);
 }
 
 /* Popups */
@@ -151,6 +188,27 @@ a.link_button_green_large {
 
 /* Header */
 
+#banner_inner {
+  background-color: $banner_inner_bg;
+}
+
+#topnav {
+  background-color: $topnav_bg;
+}
+
+.site-title__logo {
+  // Smaller logo on mobiles
+  width: ($logo-width / 2);
+  height: ($logo-height / 2);
+  background-size: ($logo-width / 2) ($logo-height / 2);
+
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    width: $logo-width;
+    height: $logo-height;
+    background-size: $logo-width $logo-height;
+  }
+}
+
 /* Add green/yellow/blue stripes before header */
 body:before {
   background: image-url('banner-stripe.png') repeat top center #333333;
@@ -162,14 +220,6 @@ body:before {
   @media( max-width: $main_menu-mobile_menu_cutoff ){
     height: 4px;
   }
-}
-
-#banner_inner {
-  background-color: $color_sobanukirwa_palegrey;
-}
-
-#topnav {
-  background-color: darken($color_sobanukirwa_palegrey, 15%);
 }
 
 #navigation{
@@ -234,10 +284,9 @@ body:before {
 }
 /* Notices, errors */
 
-#notice, #error, .errorExplanation, #request_header_text, #hidden_request, .describe_state_form form, .undescribed_requests {
+#notice, #error, .errorExplanation, #request_header_text, #hidden_request, .describe_state_form form, .undescribed_requests, .warning {
   border-top: 10px solid;
-  font-size: 1.2em;
-  border-radius: 0;
+  font-size: 1em;
   margin:1em 0;
   padding: 1.5em;
 
@@ -259,7 +308,7 @@ body:before {
   border-color: $color_sobanukirwa_darkgreen;
 }
 
-#error, .errorExplanation, #hidden_request {
+#error, .errorExplanation, #hidden_request, .warning {
   background-color: $color_sobanukirwa_lightpink;
   border-color: $color_sobanukirwa_darkred;
 
@@ -284,6 +333,7 @@ body:before {
     &:hover,
     &:active,
     &:focus {
+      color: $color_black;
       background-color: transparent;
     }
   }
@@ -319,7 +369,7 @@ body:before {
       margin-top: 0;
       border: 1px solid transparentize($color_white, 0.6);
       border-radius: 3px;
-      color: $link-color;
+      color: $color_black;
       padding: 0;
     }
   }
@@ -349,7 +399,7 @@ body:before {
   @include ie8 {
     border-top: 5px solid $color_white;
   }
-  border-top: 5px solid transparentize($color_white, 0.6);
+  border-top: 5px solid transparentize($color_white, 0.5);
 }
 
 .locale-list-trigger .current-locale,
@@ -407,11 +457,12 @@ body:before {
   padding: 0.66em 1em;
   width: 100%;
   text-decoration: none;
-  color: transparentize($color_white, 0.2);
+  color: transparentize($color_black, 0.2);
   @include ie8 {
     color: $color_white;
   }
   @include respond-min($main_menu-mobile_menu_cutoff) {
+    color: $color_white;
     background-color: lighten($color_neutral_dark, 6%);
   }
   transition: background-color 0.5s ease-out;
@@ -421,10 +472,11 @@ body:before {
 .locale-list .available-languages a:focus {
   border-bottom: none;
   background-color: darken($color_primary, 5%);
+  color: $color_black;
   @include respond-min($main_menu-mobile_menu_cutoff) {
-    background-color: $color_neutral_dark
+    background-color: $color_neutral_dark;
+    color: $color_white;
   }
-  color: $color_white;
 
 }
 
@@ -436,9 +488,10 @@ body:before {
 
 .locale-list.active .current-locale {
   background-color: $color_primary;
-  color: $color_white;
+  color: $color_black;
   border-color: $color_primary;
   @include respond-min($main_menu-mobile_menu_cutoff) {
+    color: $color_white;
     background-color: lighten($color_neutral_dark, 6%);
     border-bottom: 1px solid lighten($color_neutral_dark, 2%);
     border-bottom-right-radius: 0;
@@ -461,6 +514,7 @@ body:before {
   }
 }
 
+
 #banner {
 
   .banner_site-title {
@@ -474,9 +528,8 @@ body:before {
 
   .rsp_menu_button{
     position: absolute;
-    top: 0;
-    /* 15px for margin minus 9 for background offset*/
-    right: 4px;
+    top: 5px; // vertically centre the button in the header
+    right: 4px; // 15px for margin minus 9 for background offset
     @extend .image-replacement;
     background-image: image-url('hamburger.png');
     background-repeat: no-repeat;
@@ -492,41 +545,14 @@ body:before {
     }
   }
 
-  /* Pad evenly top and bottom on smaller devices */
-  #logo_wrapper{
-    #logo {
-      display: block;
+  &:target {
+    .rsp_menu_button {
+      top: 5px;
+      right: 4px;
     }
-
-    // Mobile logo
-    @media(max-width: $main_menu-mobile_menu_cutoff) {
-      padding: 0.5em 0 0.5em 0.9375em;
-
-      #logo {
-        background-image: image-url('logo-mobile.png');
-        background-repeat: no-repeat;
-        background-position: left center;
-        background-size: 200px 27px;
-        height: 30px;
-        @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
-          background-image: image-url('logo-mobile@2.png');
-          background-size: 200px 27px;
-        }
-      }
-
-      img {
-        display: none;
-        height: 30px;
-      }
-    }
-
-    // Desktop logo
-    @include respond-min($main_menu-mobile_menu_cutoff) {
-      margin-bottom: 0;
-    }
+  }
 }
 
-}
 
 /* Footer */
 #footer {
@@ -538,6 +564,12 @@ body:before {
   a {
     text-decoration: none;
     color: $color_white;
+    &:hover,
+    &:active,
+    &:focus {
+      color: lighten($color_primary, 10%);
+      text-decoration: underline;
+    }
   }
   h1,h2,h3,h4,h5,h6 {
     color: lighten($color_black, 15%);
@@ -564,40 +596,24 @@ body:before {
   }
 }
 
-/* Public body page */
-@media(max-width: $main_menu-mobile_menu_cutoff) {
-  #public_body_show {
-    #stepwise_make_request {
-      .link_button_green {
-        height: auto;
-      }
-    }
-  }
-}
-
 /* Request page */
 div.correspondence {
   background-color: $color_white;
+  box-shadow: 0 2px 2px transparentize($color_black, 0.8);
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 2em;
 }
 
 .incoming.correspondence {
-  border: none;
   border-top: 8px solid $color_sobanukirwa_yellow;
-  box-shadow: 0 3px 3px $color_sobanukirwa_lightgrey;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 0.9rem;
-  @include ie8 {
-    font-size: 0.9em;
-  }
   a.link_to_this {
     background-color: $color_sobanukirwa_yellow;
   }
 }
 
 .outgoing.correspondence {
-  border: none;
   border-top: 8px solid $color_sobanukirwa_blue;
-  box-shadow: 0 3px 3px $color_sobanukirwa_lightgrey;
   a.link_to_this {
     background-color: $color_sobanukirwa_blue;
   }
@@ -614,7 +630,7 @@ a.link_to_this {
   }
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: 70% 70%;
+  background-size: 14px;
   border-radius: 50%;
   height: 20px;
   width: 20px;
@@ -643,6 +659,18 @@ a.link_to_this {
       border-color: $color_soubankirwa_mutedorange;
     }
   }
+}
+
+.feed_link_sidebar .link_button_green {
+  @include button-primary();
+}
+
+.report-this-request {
+  @include button-secondary();
+  color: $color_black !important;
+  /* Using !important here as a temporary fix for a bad declaration (a:link)
+    in Alaveteli core. When this is fixed it can be removed.
+  */
 }
 
 /* Status lines and icons */
@@ -675,7 +703,7 @@ a.link_to_this {
 
 .view_html_prefix {
   font-family: $font-family;
-  background-color: $color_sobanukirwa_palegrey;
+  background-color: $color_primary;
   color: transparentize($color_white, 0.2);
   @include ie8 {
     color: $color_white;
@@ -685,6 +713,12 @@ a.link_to_this {
   }
   .view_html_logo, .view_html_description {
     padding-top: 1em;
+  }
+}
+
+#header_right {
+  .link_button_green {
+    @include button-secondary;
   }
 }
 
@@ -708,30 +742,42 @@ dt {
 
 /* Front page */
 /* Drop the extract indentation on small screens */
-#frontpage_examples .excerpt {
+#frontpage_examples {
+  .excerpt {
     padding: 0.2em 0 0 0;
     @include respond-min( $main_menu-mobile_menu_cutoff ){
       padding: 0 0 0 2em;
     }
+  }
+  p strong a {
+    @include button-secondary;
+  }
 }
 
-.steps__list li {
-  width: 33.3333%;
-  margin-left: 0 !important;
+/* How it works section */
+.steps__list {
+  li {
+    @include respond-min( $main_menu-mobile_menu_cutoff ){
+      width: 33.3333%;
+      margin-left: 0 !important;
+    }
+  }
 }
 
 .steps__step-box {
   background-color: $color_white;
   padding: 2em;
   box-shadow: 0 1px 2px transparentize($color_black, 0.75);
-  min-height: 11em;
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    min-height: 11em;
+  }
+  p {
+    line-height: 1.5em;
+    color: $color_black;
+  }
 }
 
 .steps__step-number {
-  left: 50%;
-  margin-left: -1.75em;
-  bottom: -1em;
-  top: auto;
   height: 3.5em;
   width: 3.5em;
   background-color: $color_green;
@@ -739,26 +785,43 @@ dt {
   padding: 1em;
   border-radius: 100%;
   color: $color_white;
-  text-align: center;
-  position: absolute;
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    left: 50%;
+    margin-left: -1.75em;
+    bottom: -1em;
+    top: auto;
+  }
 }
 
 .learn-more-foi {
-  margin-top: 3em;
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    margin-top: 3em;
+  }
+  a {
+    @include button-secondary;
+  }
 }
 
-.learn-more-foi a {
-  padding: 0.5em 1.25em;
-  border-radius: 3px;
-  display: inline-block;
-  text-decoration: none;
-  margin-bottom: 0;
-  color: $color_black;
-  background-color: darken($color_sand, 15%);
-
-  &:hover, &:focus {
-    background-color: darken($color_sand, 20%);
+.latest-requests {
+  .button-secondary {
+    @include button-secondary;
   }
+}
+
+/* Authority page */
+.action-bar__follower-count {
+  padding: 3px;
+  font-size: 1.1rem;
+}
+
+.action-bar__follow-button {
+  .link_button_green {
+    @include button-secondary();
+  }
+}
+
+.authority__body__sidebar form input[type=submit] {
+  @include button-secondary();
 }
 
 .hero__new-request {
@@ -783,27 +846,39 @@ dt {
   }
 }
 
-.homepage-hero .new-request__make-new-requests {
-  padding: 0.5em 1.25em;
-  border-radius: 3px;
-  display: inline-block;
-  font-weight: 600;
-  text-decoration: none;
-  margin-bottom: 0;
-  color: $color_white;
-  background-color: $color_green;
-  transition: background-color 300ms ease-out;
-
-   &:hover, &:focus {
-    background-color: darken($color_green, 10%);
+.homepage-hero {
+  .new-request__make-new-requests {
+    @include button-base;
+    background-color: desaturate(darken($color_green, 10%), 5%);
+    color: $color_black;
+    &:hover,
+    &:active,
+    &:focus {
+      background-color: darken($color_green, 20%);
+    }
   }
 }
 
-/* Request list page */
-#request_list {
-  #filter_requests_form {
-    label.form_label.title {
-      width: auto;
-    }
+.intro__title {
+  color: $color_black;
+  text-shadow: 0 1px 2px transparentize($color_black, 0.7);
+}
+
+.new-request__content {
+  background-color: $color_neutral_dark;
+  border-radius: 5px;
+  padding: 1.888888889em;
+}
+
+.new-request__title {
+  color: $color_white;
+  font-size: 1.4375em;
+  margin: 0 0 0.5em;
+}
+
+.new-request__description {
+  color: transparentize($color_white, 0.2);
+  @include ie8 {
+    color: $color_white;
   }
 }
