Fix button colour

--- a/assets/stylesheets/responsive/_settings.scss
+++ b/assets/stylesheets/responsive/_settings.scss
@@ -25,6 +25,7 @@ $color_sobanukirwa_midgrey: #999;
 $color_sobanukirwa_palegrey: #C8C9CB;
 $color_sobanukirwa_lightgrey: #d3d3d3;
 $color_sobanukirwa_blue: #5378BF;
+$color_sobanukirwa_green: #6EA942;
 $color_sobanukirwa_steel: #67848c;
 $color_sobanukirwa_yellow: #EDDF29;
 $color_sobanukirwa_darksand: #D7DABD;
@@ -51,7 +52,7 @@ $action-color: $color_sobanukirwa_paleorange;
 $font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $form_input-bg: $color_white;
 
-$button-bg: $color_sobanukirwa_blue;
+$button-bg: $color_sobanukirwa_green;
 $button-color: $color_white;
 
 $status-success: $color_green;
