--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -780,7 +780,7 @@ dt {
 .steps__step-number {
   height: 3.5em;
   width: 3.5em;
-  background-color: $color_green;
+  background-color: $color_sobanukirwa_green;
   box-shadow: 0 1px 2px transparentize($color_black, 0.75);
   padding: 1em;
   border-radius: 100%;
@@ -849,12 +849,12 @@ dt {
 .homepage-hero {
   .new-request__make-new-requests {
     @include button-base;
-    background-color: desaturate(darken($color_green, 10%), 5%);
-    color: $color_black;
+    background-color: desaturate($color_sobanukirwa_green, 5%);
+    color: $color_white;
     &:hover,
     &:active,
     &:focus {
-      background-color: darken($color_green, 20%);
+      background-color: darken($color_sobanukirwa_green, 10%);
     }
   }
 }
