Force correspondence date links to always be grey
General link colour was overriding this.

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -609,9 +609,6 @@ div.correspondence {
 
 .incoming.correspondence {
   border-top: 8px solid $color_secondary;
-  a {
-    color: $color_secondary;
-  }
   a.link_to_this {
     background-color: $color_secondary;
   }
@@ -622,6 +619,11 @@ div.correspondence {
   a.link_to_this {
     background-color: $color_primary;
   }
+}
+
+a.correspondence__header__date,
+a.correspondence__header__date:visited {
+  color: #777;
 }
 
 .describe_state_form input[type="radio"] + label {
