Reconcile with core

--- a/lib/views/help/alaveteli.rw.html.erb
+++ b/lib/views/help/alaveteli.rw.html.erb
@@ -1,7 +1,7 @@
 <% @title = "Kubaza ibibazo" %>
 
 <%= render :partial => 'sidebar' %>
-<div id="left_column_flip">
+<div id="left_column_flip" class="left_column_flip">
   <% if params[:country_name] %>  
    <h1><%= _("Would you like to see a website like this in your country?") %></h1>
   <% else %>
