--- a/lib/views/help/contact.rw.html.erb
+++ b/lib/views/help/contact.rw.html.erb
@@ -4,7 +4,7 @@
 
 <h1><%= @title %></h1>
 
-<div id="contact_preamble">
+<div id="contact_preamble" class="contact_preamble">
 
     <% if !flash[:notice] %>
         <h2>Kwandikira umuyobozi kugirango ubone amakuru yemewe n’amategeko</h2>
