--- a/lib/views/help/_sidebar.fr.html.erb
+++ b/lib/views/help/_sidebar.fr.html.erb
@@ -1,18 +1,21 @@
-<div id="right_column_flip">
-    <h2>Pages d'aide</h2>
-    <ul class="no_bullets">
-        <li><%= link_to_unless_current "Introduction", help_about_path %></li>
-        <li><%= link_to_unless_current "Faire une demande d'accès", help_requesting_path %></li>
-        <li><%= link_to_unless_current "Votre vie privée", help_privacy_path %></li>
-        <li><%= link_to_unless_current "Autorité publique", help_officers_path %></li>
-        <li><%= link_to_unless_current "A propos du logiciel", help_alaveteli_path %></li>
-        <li><%= link_to_unless_current "Credits", help_credits_path %></li>
-        <li><%= link_to_unless_current "API de programmeurs", help_api_path %></li>
-        <li><%= link_to_unless_current "Recherche avancée", advanced_search_path %></li>
-    </ul>
+<div id="right_column_flip" class="right_column_flip">
+<h2>Pages d'aide</h2>
+<ul class="no_bullets">
+  <li><%= link_to_unless_current "Introduction", help_about_path %></li>
+  <li><%= link_to_unless_current "Faire une demande d'accès", help_requesting_path %></li>
+  <li><%= link_to_unless_current "Votre vie privée", help_privacy_path %></li>
+  <li><%= link_to_unless_current "Autorité publique", help_officers_path %></li>
+  <li><%= link_to_unless_current "A propos du logiciel", help_alaveteli_path %></li>
+  <li><%= link_to_unless_current "Credits", help_credits_path %></li>
+  <li><%= link_to_unless_current "API de programmeurs", help_api_path %></li>
+  <li><%= link_to_unless_current "Recherche avancée", advanced_search_path %></li>
+  <% if feature_enabled?(:alaveteli_pro) %>
+    <li><%= link_to_unless_current "Pro", help_pro_path %></li>
+  <% end %>
+</ul>
 
-    <h2 id="contact">Nous contacter</h2>
-    <p>Si votre question n'est pas repondu, ou bien si vous voulez commenter sur ce website, <a href="<%= help_contact_path %>">contactez&nbsp;nous</a>.
-    </p>
+<h2 id="contact" class="contact">Nous contacter</h2>
+<p>Si votre question n'est pas repondu, ou bien si vous voulez commenter sur ce 
+  website, <a href="<%= help_contact_path %>">contactez&nbsp;nous<</a>.
+</p>
 </div>
-
