--- a/lib/views/help/requesting.html.erb
+++ b/lib/views/help/requesting.html.erb
@@ -1,7 +1,7 @@
 <% @title = "Making requests" %>
 
 <%= render :partial => 'sidebar' %>
-<div id="left_column_flip">
+<div id="left_column_flip" class="left_column_flip">
   <h1 id="making_requests"><%= @title %></h1>
   <dl>
 
@@ -114,13 +114,13 @@
       in the information officers section of this help.
       </li>
       <li>If you're still having no luck, then you can complain to the <a href="http://www.ombudsman.gov.rw/?How-to-complain">Office of the Ombudsman</a> about the authority.
-      Read our page '<a href="<%= help_general_path(:action => 'unhappy') %>">Unhappy about the response you got?</a>'.
+      Read our page '<a href="<%= help_general_path(:template => 'unhappy') %>">Unhappy about the response you got?</a>'.
   </ul>
   </dd>
 
   <dt id="not_satifised">What if I'm not satisfied with the response? <a href="#not_satifised">#</a> </dt>
   <dd>If you didn't get the information you asked for, or you didn't get it in time,
-  then read our page '<a href="<%= help_general_path(:action => 'unhappy') %>">Unhappy about the response you got?</a>'.
+  then read our page '<a href="<%= help_general_path(:template => 'unhappy') %>">Unhappy about the response you got?</a>'.
   </dd>
 
   <dt id="data_protection">Can I request information about myself? <a href="#data_protection">#</a> </dt>
