--- a/app/assets/stylesheets/responsive/_settings.scss
+++ b/app/assets/stylesheets/responsive/_settings.scss
@@ -6,8 +6,10 @@ $base-font-size: 16px;
 // Specify the filename and dimensions of your logo file here
 $logo-filename: 'logo.png';
 $logo-highdpi-filename: 'logo@2.png'; //Should be at least 2x the size, in the same proportions
-$logo-width: 275px;
-$logo-height: 44px;
+$logo-width: 250px;
+$logo-height: 75px;
+$logo-mobile-width: 200px;
+$logo-mobile-height: 27px;
 
 $color_sand: #f3f1eb;
 $color_black: #333333;
